--- a/firmware/V2.0/Marlin-2.0.x-SKR-mini-E3-V2.0/platformio.ini
+++ b/firmware/V2.0/Marlin-2.0.x-SKR-mini-E3-V2.0/platformio.ini
@@ -324,6 +324,7 @@ monitor_speed     = 115200
 [env:STM32F103RC_btt_512K]
 platform          = ststm32
 board             = genericSTM32F103RC
+board_build.core  = maple
 board_upload.maximum_size=524288
 platform_packages = tool-stm32duino
 build_flags       = !python Marlin/src/HAL/STM32F1/build_flags.py
